# LexAI

./: .gitignore  Agent.md  CHANGELOG.md  CONFIGURING.md  CONTRIBUTING.md  README.md  TECH_DEBT.md  package.json
.github/workflows/: ci.yml  release.yml
backend/: Cargo.toml  README.md  build.py  debug_pipeline.py  pyproject.toml  requirements-build.txt  rpc_server.py  rpc_server.spec  test_chinese_path.py  test_surrogate_fix.py
backend/.cargo/: config.toml
backend/app/: bootstrap.py  config.py  main.py  rpc_worker.py  schemas.py  services.py
backend/app/routers/: documents.py
backend/rpc_worker/: Cargo.toml
backend/rpc_worker/src/: document.rs  embeddings.rs  jsonrpc.rs  lib.rs  main.rs  manager.rs  qdrant.rs  tokenizer.rs
backend/rust_core/: Cargo.toml
backend/rust_core/src/: lib.rs
backend/tests/: test_pipeline.py
client/: package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/migrations/: 001_create_terms.sql  002_add_review_fields.sql  003_add_definition_cn.sql
client/src-tauri/resources/fonts/: DejaVuSans-LICENSE.txt
client/src-tauri/src/: lib.rs
client/src/components/: ContextPanel.tsx  DiagnosticsPanel.tsx  DocumentPanel.tsx  ExtractedViewer.tsx  GlobalTermbaseView.tsx  OnboardingView.tsx  OriginalViewer.tsx  ReadingPanel.tsx  ReviewCenter.tsx  SettingsView.tsx  TermsPanel.tsx
client/src/components/renderers/: PdfRenderer.tsx
client/src/components/ui/: button.tsx  card.tsx  input.tsx  select.tsx
client/src/lib/: apiKeys.ts  configStore.ts  llmClient.ts  promptBuilder.ts  sessionStore.ts  termUtils.ts
client/src/lib/__tests__/: promptBuilder.test.ts  termUtils.test.ts
client/src/state/: AppState.tsx  LocaleContext.tsx
docs/: 01-项目概览.md  02-需求分析&架构初稿.md  03-开发阶段要求.md  04-参考实现思路.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPER.md  ROADMAP.md  ai_coding_prompt.md  merge-log.md
docs/versions/: README.md  _TEMPLATE.md  phase-0-initial-scaffold-20251012.md  phase-1-backend-pipeline-20251012.md  phase-10-rpc-integration-20251018.md  phase-11-roadmap-20251020.md  phase-12-ui-and-workspace-20251021.md  phase-13-bug-fixes-and-performance-20251021.md  phase-14-windows-stability-and-dark-theme-20251022.md  phase-2-client-workflow-20251012.md  phase-3-advanced-config-20251012.md  phase-4-onboarding-and-termbase-20251012.md  phase-6-learning-loop-20251013.md  phase-7-release-hardening-20251017.md  phase-8-export-features-20251018.md  phase-9-ux-polish-20251018.md
