[workspace]
members = [
    "rust_core",
    "rpc_worker",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
qdrant-client = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
ort = { version = "1", default-features = false, features = ["load-dynamic"] }
tokenizers = { version = "0.15", default-features = false, features = ["onig"] }
ndarray = "0.15"

