[project]
name = "lexai-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mengdehong",email = "mdh2018534846@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn[standard] (>=0.37.0,<0.38.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "qdrant-client (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "maturin (>=1.9.6,<2.0.0)"
]
