[package]
name = "rpc_worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "rpc_worker"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
qdrant-client.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ort.workspace = true
tokenizers.workspace = true
ndarray.workspace = true
pdf-extract = { path = "../../3rd/pdf-extract" }
uuid = { version = "1", features = ["v4", "fast-rng"] }

[features]
default = []

# Placeholder for embedding dependencies (to be updated once model integration is defined)
