[package]
name = "client"
version = "0.1.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlite", "migrate"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-stronghold = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "process", "io-util", "time"] }
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
iota_stronghold = "2"
genanki-rs = { path = "vendor/genanki-rs" }
genpdf = { version = "0.2", default-features = false }

[dev-dependencies]
tempfile = "3"

